# qed-rs

./: .gitignore  Cargo.toml  requirements.txt
src/: main.rs  scanner.rs  text.txt  token.rs  token_type.rs
src/nlp_api/: nlp_api.py  pyproject.toml
src/nlp_api/nlp_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
