[package]
name = "qed-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0" }
candle-core = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
symbolica = { version = "1.0.1" }
selen = { version = "0.15.4" }
wordnet = { version = "0.1.2" }
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }